<?xml version="1.0" encoding="UTF-8"?><resources><string name="androidAppModule1string0">androidAppModule1string0</string>
<string name="androidAppModule1string1">androidAppModule1string1</string>
<string name="androidAppModule1string2">androidAppModule1string2</string>
<string name="androidAppModule1string3">androidAppModule1string3</string>
<string name="androidAppModule1string4">androidAppModule1string4</string>
<string name="androidAppModule1string5">androidAppModule1string5</string>
<string name="androidAppModule1string6">androidAppModule1string6</string>
<string name="androidAppModule1string7">androidAppModule1string7</string>
<string name="androidAppModule1string8">androidAppModule1string8</string>
<string name="androidAppModule1string9">androidAppModule1string9</string>
<string name="androidAppModule1string10">androidAppModule1string10</string>
<string name="androidAppModule1string11">androidAppModule1string11</string>
<string name="androidAppModule1string12">androidAppModule1string12</string>
<string name="androidAppModule1string13">androidAppModule1string13</string>
<string name="androidAppModule1string14">androidAppModule1string14</string>
<string name="androidAppModule1string15">androidAppModule1string15</string>
<string name="androidAppModule1string16">androidAppModule1string16</string>
<string name="androidAppModule1string17">androidAppModule1string17</string>
<string name="androidAppModule1string18">androidAppModule1string18</string>
<string name="androidAppModule1string19">androidAppModule1string19</string>
<string name="androidAppModule1string20">androidAppModule1string20</string>
<string name="androidAppModule1string21">androidAppModule1string21</string>
<string name="androidAppModule1string22">androidAppModule1string22</string>
<string name="androidAppModule1string23">androidAppModule1string23</string>
<string name="androidAppModule1string24">androidAppModule1string24</string>
<string name="androidAppModule1string25">androidAppModule1string25</string>
<string name="androidAppModule1string26">androidAppModule1string26</string>
<string name="androidAppModule1string27">androidAppModule1string27</string>
<string name="androidAppModule1string28">androidAppModule1string28</string>
<string name="androidAppModule1string29">androidAppModule1string29</string>
<string name="androidAppModule1string30">androidAppModule1string30</string>
<string name="androidAppModule1string31">androidAppModule1string31</string>
<string name="androidAppModule1string32">androidAppModule1string32</string>
<string name="androidAppModule1string33">androidAppModule1string33</string>
<string name="androidAppModule1string34">androidAppModule1string34</string>
<string name="androidAppModule1string35">androidAppModule1string35</string>
<string name="androidAppModule1string36">androidAppModule1string36</string>
<string name="androidAppModule1string37">androidAppModule1string37</string>
<string name="androidAppModule1string38">androidAppModule1string38</string>
<string name="androidAppModule1string39">androidAppModule1string39</string>
<string name="androidAppModule1string40">androidAppModule1string40</string>
<string name="androidAppModule1string41">androidAppModule1string41</string>
<string name="androidAppModule1string42">androidAppModule1string42</string>
<string name="androidAppModule1string43">androidAppModule1string43</string>
<string name="androidAppModule1string44">androidAppModule1string44</string>
<string name="androidAppModule1string45">androidAppModule1string45</string>
<string name="androidAppModule1string46">androidAppModule1string46</string>
<string name="androidAppModule1string47">androidAppModule1string47</string>
<string name="androidAppModule1string48">androidAppModule1string48</string>
<string name="androidAppModule1string49">androidAppModule1string49</string>
<string name="androidAppModule1string50">androidAppModule1string50</string>
<string name="androidAppModule1string51">androidAppModule1string51</string>
<string name="androidAppModule1string52">androidAppModule1string52</string>
<string name="androidAppModule1string53">androidAppModule1string53</string>
<string name="androidAppModule1string54">androidAppModule1string54</string>
<string name="androidAppModule1string55">androidAppModule1string55</string>
<string name="androidAppModule1string56">androidAppModule1string56</string>
<string name="androidAppModule1string57">androidAppModule1string57</string>
<string name="androidAppModule1string58">androidAppModule1string58</string>
<string name="androidAppModule1string59">androidAppModule1string59</string>
<string name="androidAppModule1string60">androidAppModule1string60</string>
<string name="androidAppModule1string61">androidAppModule1string61</string>
<string name="androidAppModule1string62">androidAppModule1string62</string>
<string name="androidAppModule1string63">androidAppModule1string63</string>
<string name="androidAppModule1string64">androidAppModule1string64</string>
<string name="androidAppModule1string65">androidAppModule1string65</string>
<string name="androidAppModule1string66">androidAppModule1string66</string>
<string name="androidAppModule1string67">androidAppModule1string67</string>
<string name="androidAppModule1string68">androidAppModule1string68</string>
<string name="androidAppModule1string69">androidAppModule1string69</string>
<string name="androidAppModule1string70">androidAppModule1string70</string>
<string name="androidAppModule1string71">androidAppModule1string71</string>
<string name="androidAppModule1string72">androidAppModule1string72</string>
<string name="androidAppModule1string73">androidAppModule1string73</string>
<string name="androidAppModule1string74">androidAppModule1string74</string>
<string name="androidAppModule1string75">androidAppModule1string75</string>
<string name="androidAppModule1string76">androidAppModule1string76</string>
<string name="androidAppModule1string77">androidAppModule1string77</string>
<string name="androidAppModule1string78">androidAppModule1string78</string>
<string name="androidAppModule1string79">androidAppModule1string79</string>
<string name="androidAppModule1string80">androidAppModule1string80</string>
<string name="androidAppModule1string81">androidAppModule1string81</string>
<string name="androidAppModule1string82">androidAppModule1string82</string>
<string name="androidAppModule1string83">androidAppModule1string83</string>
<string name="androidAppModule1string84">androidAppModule1string84</string>
<string name="androidAppModule1string85">androidAppModule1string85</string>
<string name="androidAppModule1string86">androidAppModule1string86</string>
<string name="androidAppModule1string87">androidAppModule1string87</string>
<string name="androidAppModule1string88">androidAppModule1string88</string>
<string name="androidAppModule1string89">androidAppModule1string89</string>
<string name="androidAppModule1string90">androidAppModule1string90</string>
<string name="androidAppModule1string91">androidAppModule1string91</string>
<string name="androidAppModule1string92">androidAppModule1string92</string>
<string name="androidAppModule1string93">androidAppModule1string93</string>
<string name="androidAppModule1string94">androidAppModule1string94</string>
<string name="androidAppModule1string95">androidAppModule1string95</string>
<string name="androidAppModule1string96">androidAppModule1string96</string>
<string name="androidAppModule1string97">androidAppModule1string97</string>
<string name="androidAppModule1string98">androidAppModule1string98</string>
<string name="androidAppModule1string99">androidAppModule1string99</string>
<string name="androidAppModule1string100">androidAppModule1string100</string>
<string name="androidAppModule1string101">androidAppModule1string101</string>
</resources>