<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
        android:id="@+id/androidappmodule1activity_main99androidAppModule1string990"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule1string99"
        
/><TextView
        android:id="@+id/androidappmodule1activity_main99androidAppModule1string1001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule1string100"
        
/><TextView
        android:id="@+id/androidappmodule1activity_main99androidAppModule1string1012"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule1string101"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main99androidappmodule1image990"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image99"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main99androidappmodule1image1001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image100"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main99androidappmodule1image1012"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image101"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main99androidappmodule1image1023"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image102"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main99androidappmodule1image1034"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image103"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main99androidappmodule1image1045"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image104"
        
/>
            
            
        </LinearLayout>
    </layout>