<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
        android:id="@+id/androidappmodule1activity_main49androidAppModule1string490"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule1string49"
        
/><TextView
        android:id="@+id/androidappmodule1activity_main49androidAppModule1string501"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule1string50"
        
/><TextView
        android:id="@+id/androidappmodule1activity_main49androidAppModule1string512"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule1string51"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main49androidappmodule1image490"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image49"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main49androidappmodule1image501"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image50"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main49androidappmodule1image512"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image51"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main49androidappmodule1image523"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image52"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main49androidappmodule1image534"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image53"
        
/>
            <ImageView
        android:id="@+id/androidappmodule1activity_main49androidappmodule1image545"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule1image54"
        
/>
            
            
        </LinearLayout>
    </ScrollView>